--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4"
+  },
+  "devDependencies": {
+    "eslint": "^7.7.0"
   }
 }
